# specler

./: Cargo.toml  README.md
specler/: Cargo.toml
specler/src/: core.rs  lib.rs  prelude.rs  specs.rs
specler/src/core/: asserts.rs  spec.rs  spec_error.rs  validated.rs  validator.rs  value_object.rs
specler/src/core/spec/: contains_spec.rs  spec_provider.rs  spec_validation_result.rs
specler/src/core/validator/: validator_fn.rs
specler/src/specs/: integer.rs  string.rs  uuid.rs
specler_arbitrary/: Cargo.toml  README.md
specler_arbitrary/src/: lib.rs
specler_common/: Cargo.toml  README.md
specler_common/src/: identification.rs
specler_common/src/identification/: uuid.rs
specler_core/: Cargo.toml  README.md
specler_core/src/: lib.rs  prelude.rs  specs.rs
specler_core/src/core/: create_with_specification.rs  require.rs  spec.rs  validated.rs
specler_core/src/specs/: integer.rs  string.rs
specler_core/tests/: common.rs  integer_specs.rs  string_specs.rs
specler_macros/: Cargo.toml  README.md
specler_macros/src/: lib.rs
specler_tests/: Cargo.toml
specler_tests/src/: integer_specs.rs  lib.rs  string_specs.rs  uuid_specs.rs
specler_tests/tests/: integer_specs.rs  string_specs.rs  uuid_specs.rs
src/: core.rs  lib.rs  specs.rs
src/core/: asserts.rs  require.rs  spec.rs  spec_error.rs  validated.rs  validator.rs
src/core/spec/: contains_spec.rs  spec_validation_result.rs  spec_validator_result.rs
src/core/validator/: validator_result.rs
src/specs/: integer.rs  string.rs
tests/: common.rs  integer_specs.rs  string_specs.rs
