[package]
name = "specler"
version = "0.15.0"
edition = "2021"
description = "A simple way to write specifications on values"
license = "CC0-1.0"
repository = "https://github.com/jamescauwelier/specler"
documentation = "https://docs.rs/specler"
homepage = "https://github.com/jamescauwelier/specler"
readme = "README.md"
keywords = ["validation", "specification", "rust"]
authors = ["James Cauwelier <james.cauwelier@gmail.com>"]

[features]
default = []
uuid_strings = ["dep:uuid"]
all = ["uuid_strings"]

[dependencies]
email_address = "0.2.9"
regex = "1.11.1"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4", "v7"], optional = true}

[dev-dependencies]
proptest.workspace = true
