[package]
name = "specler_arbitrary"
version = "0.21.0"
edition = "2021"
description = "For generating arbitrary values for specler specifications"
license = "CC0-1.0"
repository = "https://github.com/jamescauwelier/specler"
documentation = "https://docs.rs/specler"
homepage = "https://github.com/jamescauwelier/specler"
readme = "README.md"
keywords = ["validation", "specification", "rust"]
authors = ["James Cauwelier <james.cauwelier@gmail.com>"]

[dependencies]
proptest.workspace = true
